add local filesave and autosave (#20)