@@ -10,13 +10,13 @@ repositories {
 	mavenCentral()
 }
 
-def runeLiteVersion = '1.9.2'
+def runeLiteVersion = '1.12.13'
 
 dependencies {
 	compileOnly group: 'net.runelite', name:'client', version: runeLiteVersion
 
-    compileOnly 'org.projectlombok:lombok:1.18.20'
-    annotationProcessor 'org.projectlombok:lombok:1.18.20'
+    compileOnly 'org.projectlombok:lombok:1.18.36'
+    annotationProcessor 'org.projectlombok:lombok:1.18.36'
 
 	testImplementation 'junit:junit:4.12'
 	testImplementation group: 'net.runelite', name:'client', version: runeLiteVersion
@@ -24,9 +24,36 @@ dependencies {
 }
 
 group = 'com.ClanEventAttendance'
-version = '1.5.0'
+version = '1.6.0'
 sourceCompatibility = '1.8'
 
 tasks.withType(JavaCompile) {
 	options.encoding = 'UTF-8'
+}
+
+tasks.register('run',JavaExec) {
+	main = 'com.ClanEventAttendance.ClanEventAttendancePluginTest'
+	classpath = sourceSets.test.runtimeClasspath
+
+	enableAssertions = true
+	args "--developer-mode", "--debug"
+
+	jvmArgs = [
+		'--add-opens=java.base/java.lang=ALL-UNNAMED',
+		'--add-opens=java.base/java.lang.invoke=ALL-UNNAMED',
+		'--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
+		'--add-opens=java.base/java.io=ALL-UNNAMED',
+		'--add-opens=java.base/java.net=ALL-UNNAMED',
+		'--add-opens=java.base/java.nio=ALL-UNNAMED',
+		'--add-opens=java.base/java.util=ALL-UNNAMED',
+		'--add-opens=java.base/java.util.concurrent=ALL-UNNAMED',
+		'--add-opens=java.base/java.util.regex=ALL-UNNAMED',
+		'--add-opens=java.base/sun.nio.ch=ALL-UNNAMED',
+		'--add-opens=java.desktop/java.awt=ALL-UNNAMED',
+		'--add-opens=java.desktop/java.awt.event=ALL-UNNAMED',
+		'--add-opens=java.desktop/sun.awt=ALL-UNNAMED',
+		'--add-opens=java.desktop/javax.swing.plaf.basic=ALL-UNNAMED',
+		'--add-opens=java.desktop/sun.font=ALL-UNNAMED',
+		'--add-opens=java.desktop/sun.java2d=ALL-UNNAMED'
+	]
 }
